--- a/client/src/components/List/index.scss
+++ b/client/src/components/List/index.scss
@@ -14,14 +14,14 @@
     height: 100%;
 
     .input-wrapper {
-        border-bottom: 1px solid #e6e6e6;
-        margin-bottom: 10px;
+        border-top: 1px solid #e6e6e6;
+        margin-top: 10px;
         position: fixed;
         width: 100%;
-        top: 0;
+        bottom: 0;
         left: 0;
         background: #fff;
-        box-shadow: 0px 1px 5px rgba(166,166,166,0.5);
+        box-shadow: 0px -1px 5px rgba(166,166,166,0.5);
 
         input {
             border: 1px solid #e6e6e6;
@@ -46,7 +46,7 @@
     }
 
     .search-results {
-        margin-top: 80px;
+        margin-bottom: 80px;
         overflow-y: auto;
         height: 100%;
 
@@ -89,19 +89,13 @@
     }
 
     .search-list {
-        .input-wrapper {
-            input {
-                height: 32px;
-            }
-        }
-
         .search-counter {
             font-size: 12px;
             margin-bottom: 10px;
         }
 
         .search-results {
-            margin-top: 55px;
+            margin-bottom: 55px;
 
             &:after {
                 height: 55px;
