--- a/client/src/components/List/index.scss
+++ b/client/src/components/List/index.scss
@@ -14,14 +14,14 @@
     height: 100%;
 
     .input-wrapper {
-        border-top: 1px solid #e6e6e6;
-        margin-top: 10px;
+        border-bottom: 1px solid #e6e6e6;
+        margin-bottom: 10px;
         position: fixed;
         width: 100%;
-        bottom: 0;
+        top: 0;
         left: 0;
         background: #fff;
-        box-shadow: 0px -1px 5px rgba(166,166,166,0.5);
+        box-shadow: 0px 1px 5px rgba(166,166,166,0.5);
 
         input {
             border: 1px solid #e6e6e6;
@@ -46,7 +46,7 @@
     }
 
     .search-results {
-        margin-bottom: 80px;
+        margin-top: 80px;
         overflow-y: auto;
         height: 100%;
 
@@ -89,12 +89,23 @@
     }
 
     .search-list {
+        .input-wrapper {
+            border-bottom: none;
+            border-top: 1px solid #e6e6e6;
+            margin-bottom: 0;
+            margin-top: 10px;
+            top: inherit;
+            bottom: 0;
+            box-shadow: 0px -1px 5px rgba(166,166,166,0.5);
+        }
+
         .search-counter {
             font-size: 12px;
             margin-bottom: 10px;
         }
 
         .search-results {
+            margin-top: 0;
             margin-bottom: 55px;
 
             &:after {
