--- a/client/src/components/List/index.scss
+++ b/client/src/components/List/index.scss
@@ -22,6 +22,7 @@
         left: 0;
         background: #fff;
         box-shadow: 0px 1px 5px rgba(166,166,166,0.5);
+        z-index: 1;
 
         input {
             border: 1px solid #e6e6e6;
