add search button

--- a/client/src/components/List/index.scss
+++ b/client/src/components/List/index.scss
@@ -4,6 +4,7 @@
 
 .wrapper {
     max-width: 550px;
+    position: relative;
 }
 
 .wrapper-wide {
@@ -24,13 +25,34 @@
     border-radius: 20px;
     outline: none;
     height: 36px;
-    padding: 0 12px;
-    width: calc(100% - 24px);
+    padding: 0 122px 0 12px;
+    width: calc(100% - 134px);
     transition: border-color 0.15s;
 
     &:hover, &:focus {
         border-color: #c6c6c6;
     }       
+}
+
+.button {
+    position: absolute;
+    right: -1px;
+    top: 1px;
+    margin: 20px;
+    height: 36px;
+    border: 0;
+    background-color: #d9ba77;
+    outline: 0;
+    border-radius: 0 20px 20px 0;
+    width: 110px;
+    cursor: pointer;
+    font-weight: 600;
+    color: #fff;
+    font-size: 15px;
+
+    &:hover, &:focus {
+        box-shadow: 0px 0px 6px rgba(166, 166, 166, 0.5);
+    }
 }
 
 .search-landing {
@@ -132,6 +154,10 @@
 @media (max-width: 700px) {
     .wrapper, .wrapper-wide {
         padding: 10px;
+    }
+
+    .button {
+        margin: 10px;
     }
 
     .search-list {
