--- a/client/public/views/index.ejs
+++ b/client/public/views/index.ejs
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div id="container"></div>
-    <script src="js/dist/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
 </body>
 </html>
