--- a/client/src/components/List/index.scss
+++ b/client/src/components/List/index.scss
@@ -53,6 +53,10 @@
     font-size: 15px;
     padding: 0 15px;
 
+    + .button {
+        margin-left: 15px;
+    }
+
     &:hover, &:focus {
         box-shadow: 0px 0px 6px rgba(166, 166, 166, 0.5);
     }
@@ -76,6 +80,14 @@
         font-size: 18px;
         box-shadow: none;
     }
+}
+
+.tip {
+    margin-bottom: 20px;
+    color: #c6c6c6;
+    font-style: italic;
+    font-size: 13px;
+    margin-right: 15px;
 }
 
 .search-landing {
@@ -103,13 +115,6 @@
         margin-bottom: 10px;
         top: 0;
         left: 0;
-    }
-
-    .search-counter {
-        margin-bottom: 20px;
-        color: #c6c6c6;
-        font-style: italic;
-        font-size: 13px;
     }
 
     .search-results {
@@ -217,6 +222,11 @@
         }
     }
 
+    .tip {
+        font-size: 12px;
+        margin-bottom: 10px;
+    }
+
     .search-list {
         .input-wrapper {
             border-bottom: none;
@@ -225,11 +235,6 @@
             margin-top: 10px;
             top: inherit;
             bottom: 0;
-        }
-
-        .search-counter {
-            font-size: 12px;
-            margin-bottom: 10px;
         }
 
         .search-results {
