--- a/client/public/views/export.ejs
+++ b/client/public/views/export.ejs
@@ -2,16 +2,28 @@
     html,
     body {
         margin: 0;
-        padding: 5px;
+        padding: 5px 10px;
+        font-size: 14px;
+        font-family: arial,sans-serif;
+        color: #222;
+        line-height: 1.5;
     }
 
     h1 {
-        font-size: 16px;
+        font-weight: 400;
+        margin: 15px 0;
+    }
+
+    .tip {
+        color: #c6c6c6;
+        font-style: italic;
+        font-size: 13px;
     }
 
     table {
         border-collapse: collapse;
         font-size: 12px;
+        width: 100%;
     }
 
     th,
@@ -23,7 +35,9 @@
 
 <div>
     <h1>
-        Результаты поиска<%= q ? ' "' + q + '"' : '' %>
+        <div class='tip'>
+            Результаты поиска<%= q ? ' "' + q + '"' : '' %>
+        </div>
     </h1>
     <table>
         <thead>
