npm -> yarn; webpack 3 -> webpack 4; уменьшение размера bundle.js

--- a/client/src/components/List/index.scss
+++ b/client/src/components/List/index.scss
@@ -6,7 +6,7 @@ $input-l-height: 51px;
 $input-l-border-radius: 30px;
 
 $color-green: #4eb276;
-$coolor-orange: #d9ba77;
+$color-orange: #d9ba77;
 
 .wrapper, .wrapper-wide {
     padding: 20px;
