--- a/client/src/components/App/index.scss
+++ b/client/src/components/App/index.scss
@@ -3,7 +3,7 @@ html, body {
     padding: 0;
     font-size: 14px;
     font-family: arial,sans-serif;
-    color: #222;
+    color: #0f0f0f;
     line-height: 1.5;
     height: 100%;
     overflow: hidden;
